[gd_scene load_steps=78 format=3 uid="uid://b6xvofyoblwm4"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_i4qmn"]
[ext_resource type="Script" path="res://scripts/rocket.gd" id="2_fbuok"]
[ext_resource type="Texture2D" uid="uid://cj1r6bek14s27" path="res://assets/backgrounds/SLS08_stars_and_dust_tile.png" id="2_lh2vd"]
[ext_resource type="Texture2D" uid="uid://mp73rxajjfkj" path="res://assets/backgrounds/SLS08_planets.png" id="3_koujq"]
[ext_resource type="Texture2D" uid="uid://bbdhj4wsl6stn" path="res://assets/rocket/GRL_spaceship_1-0.png" id="4_affbb"]
[ext_resource type="Texture2D" uid="uid://cfsdtexxc8erl" path="res://assets/particules/smoke_01.png" id="5_idxnp"]
[ext_resource type="Texture2D" uid="uid://dxh48weccp38c" path="res://assets/rocket/GRL_RCS_thruster_block_1-0.png" id="5_nvpx3"]
[ext_resource type="Texture2D" uid="uid://bqsjlc3c2t7d0" path="res://assets/particules/smoke_04.png" id="5_xig4c"]
[ext_resource type="Texture2D" uid="uid://cm32e3spkcl7c" path="res://assets/rocket/explosions/explosion 3.png" id="7_haxk0"]
[ext_resource type="Script" path="res://scripts/actions.gd" id="9_1xfh8"]
[ext_resource type="Script" path="res://scripts/wind.gd" id="12_nldry"]
[ext_resource type="Script" path="res://scripts/planet.gd" id="13_itfad"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_a8c1y"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_dar0e"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_8xccy"]
colors = PackedColorArray(0.35, 0.35, 0.35, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dwvai"]
gradient = SubResource("Gradient_8xccy")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kl1g3"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
angle_min = -720.0
angle_max = 720.0
direction = Vector3(0, 0, 0)
spread = 25.0
initial_velocity_min = 311.26
initial_velocity_max = 1000.0
orbit_velocity_min = -0.5
orbit_velocity_max = 0.5
gravity = Vector3(0, 980, 0)
scale_min = 0.01
scale_max = 0.05
color = Color(0.377919, 0.377919, 0.377919, 1)
color_ramp = SubResource("GradientTexture1D_dwvai")
anim_speed_max = 128.0

[sub_resource type="Gradient" id="Gradient_msjiw"]
colors = PackedColorArray(0.75, 0.138125, 0.0825, 1, 0.934951, 0.653508, 1.15514e-06, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4ah4x"]
gradient = SubResource("Gradient_msjiw")

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_2djnp"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ioh63"]
lifetime_randomness = 0.75
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(0, 1, 0)
angle_min = -720.0
angle_max = 720.0
direction = Vector3(0, 0, 0)
spread = 5.0
initial_velocity_min = 750.0
initial_velocity_max = 1000.0
directional_velocity_min = 1.0
directional_velocity_max = 1.0
directional_velocity_curve = SubResource("CurveXYZTexture_2djnp")
gravity = Vector3(0, 980, 0)
scale_min = 0.01
scale_max = 0.05
color = Color(0.377919, 0.377919, 0.377919, 1)
color_ramp = SubResource("GradientTexture1D_4ah4x")
anim_speed_max = 100.0
turbulence_noise_strength = 0.32
collision_mode = 1
collision_friction = 1.0
collision_bounce = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ws66b"]
atlas = ExtResource("7_haxk0")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8axy"]
atlas = ExtResource("7_haxk0")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh240"]
atlas = ExtResource("7_haxk0")
region = Rect2(2048, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_oidfb"]
atlas = ExtResource("7_haxk0")
region = Rect2(2560, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_3egyh"]
atlas = ExtResource("7_haxk0")
region = Rect2(3072, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjqi4"]
atlas = ExtResource("7_haxk0")
region = Rect2(3584, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfpir"]
atlas = ExtResource("7_haxk0")
region = Rect2(0, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_84lr7"]
atlas = ExtResource("7_haxk0")
region = Rect2(512, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayk08"]
atlas = ExtResource("7_haxk0")
region = Rect2(1024, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbwe7"]
atlas = ExtResource("7_haxk0")
region = Rect2(1536, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_1re2p"]
atlas = ExtResource("7_haxk0")
region = Rect2(2048, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_e802b"]
atlas = ExtResource("7_haxk0")
region = Rect2(2560, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkuob"]
atlas = ExtResource("7_haxk0")
region = Rect2(3072, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ss1y"]
atlas = ExtResource("7_haxk0")
region = Rect2(3584, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyr0u"]
atlas = ExtResource("7_haxk0")
region = Rect2(0, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_bd28e"]
atlas = ExtResource("7_haxk0")
region = Rect2(512, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1hef"]
atlas = ExtResource("7_haxk0")
region = Rect2(1024, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_top2m"]
atlas = ExtResource("7_haxk0")
region = Rect2(1536, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujxpr"]
atlas = ExtResource("7_haxk0")
region = Rect2(2048, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ko1bf"]
atlas = ExtResource("7_haxk0")
region = Rect2(2560, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd7d7"]
atlas = ExtResource("7_haxk0")
region = Rect2(3072, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_han3k"]
atlas = ExtResource("7_haxk0")
region = Rect2(3584, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_qb0km"]
atlas = ExtResource("7_haxk0")
region = Rect2(0, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxesb"]
atlas = ExtResource("7_haxk0")
region = Rect2(512, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6n0q"]
atlas = ExtResource("7_haxk0")
region = Rect2(1024, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_asncf"]
atlas = ExtResource("7_haxk0")
region = Rect2(1536, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_eels1"]
atlas = ExtResource("7_haxk0")
region = Rect2(2048, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqfpm"]
atlas = ExtResource("7_haxk0")
region = Rect2(2560, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_oct47"]
atlas = ExtResource("7_haxk0")
region = Rect2(3072, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_78hhk"]
atlas = ExtResource("7_haxk0")
region = Rect2(3584, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5g85"]
atlas = ExtResource("7_haxk0")
region = Rect2(0, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2fig"]
atlas = ExtResource("7_haxk0")
region = Rect2(512, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_qegqg"]
atlas = ExtResource("7_haxk0")
region = Rect2(1024, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyd8t"]
atlas = ExtResource("7_haxk0")
region = Rect2(1536, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kv1r"]
atlas = ExtResource("7_haxk0")
region = Rect2(2048, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyufw"]
atlas = ExtResource("7_haxk0")
region = Rect2(2560, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu3oy"]
atlas = ExtResource("7_haxk0")
region = Rect2(3072, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4k2i"]
atlas = ExtResource("7_haxk0")
region = Rect2(3584, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujmla"]
atlas = ExtResource("7_haxk0")
region = Rect2(0, 2560, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_cao05"]
atlas = ExtResource("7_haxk0")
region = Rect2(512, 2560, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_48yv4"]
atlas = ExtResource("7_haxk0")
region = Rect2(1024, 2560, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib5bt"]
atlas = ExtResource("7_haxk0")
region = Rect2(1536, 2560, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_eru12"]
atlas = ExtResource("7_haxk0")
region = Rect2(2048, 2560, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmpiy"]
atlas = ExtResource("7_haxk0")
region = Rect2(2560, 2560, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx8vk"]
atlas = ExtResource("7_haxk0")
region = Rect2(3072, 2560, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ave3q"]
atlas = ExtResource("7_haxk0")
region = Rect2(3584, 2560, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvqa2"]
atlas = ExtResource("7_haxk0")
region = Rect2(0, 3072, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnr53"]
atlas = ExtResource("7_haxk0")
region = Rect2(512, 3072, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynn13"]
atlas = ExtResource("7_haxk0")
region = Rect2(1024, 3072, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_u56b6"]
atlas = ExtResource("7_haxk0")
region = Rect2(1536, 3072, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ho67"]
atlas = ExtResource("7_haxk0")
region = Rect2(2048, 3072, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nmvr"]
atlas = ExtResource("7_haxk0")
region = Rect2(2560, 3072, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwda0"]
atlas = ExtResource("7_haxk0")
region = Rect2(3072, 3072, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7v2n"]
atlas = ExtResource("7_haxk0")
region = Rect2(3584, 3072, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8aal"]
atlas = ExtResource("7_haxk0")
region = Rect2(0, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_qwlll"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ws66b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8axy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh240")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oidfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3egyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjqi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfpir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84lr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayk08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbwe7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1re2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e802b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkuob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ss1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyr0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bd28e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1hef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_top2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujxpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko1bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd7d7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_han3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qb0km")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxesb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6n0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asncf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eels1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqfpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oct47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78hhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5g85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2fig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qegqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyd8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kv1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyufw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu3oy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4k2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujmla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cao05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48yv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib5bt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eru12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmpiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx8vk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ave3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvqa2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnr53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynn13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u56b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ho67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nmvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwda0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7v2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8aal")
}],
"loop": false,
"name": &"explosion",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_affbb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_i4qmn")

[node name="WindSystem" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -710)
script = ExtResource("12_nldry")
wind_force = 0.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_enabled = true

[node name="ParallaxStars" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.01, 0.01)
motion_mirroring = Vector2(3000, 3000)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxStars"]
texture = ExtResource("2_lh2vd")

[node name="ParallaxPlanets" type="ParallaxLayer" parent="ParallaxBackground"]
scale = Vector2(0.2, 0.2)
motion_scale = Vector2(0.2, 0.2)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxPlanets"]
position = Vector2(-10, -675)
scale = Vector2(3, 3)
texture = ExtResource("3_koujq")

[node name="Actions" type="Node" parent="."]
process_mode = 3
script = ExtResource("9_1xfh8")

[node name="Planet" type="StaticBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 750)
script = ExtResource("13_itfad")

[node name="planet" type="Sprite2D" parent="Planet"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planet"]
process_mode = 3
shape = SubResource("WorldBoundaryShape2D_a8c1y")

[node name="Rocket" type="RigidBody2D" parent="."]
disable_mode = 1
gravity_scale = 0.0
can_sleep = false
continuous_cd = 2
contact_monitor = true
max_contacts_reported = 10
script = ExtResource("2_fbuok")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Rocket"]
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(32, 0, 33, -83, 22, -106, 23, -163, 16, -203, 0, -238, -16, -203, -21, -162, -21, -106, -33, -81, -33, 0)
one_way_collision_margin = 5.0

[node name="ParticulesLT" type="GPUParticles2D" parent="Rocket"]
material = SubResource("CanvasItemMaterial_dar0e")
position = Vector2(-16, -73.5)
rotation = -3.14159
scale = Vector2(0.1, 0.1)
amount = 100
amount_ratio = 0.0
process_material = SubResource("ParticleProcessMaterial_kl1g3")
texture = ExtResource("5_idxnp")
lifetime = 0.15
draw_order = 0
trail_lifetime = 0.1

[node name="ParticulesRT" type="GPUParticles2D" parent="Rocket"]
material = SubResource("CanvasItemMaterial_dar0e")
position = Vector2(16, -73.5)
scale = Vector2(0.1, 0.1)
amount = 100
amount_ratio = 0.0
process_material = SubResource("ParticleProcessMaterial_kl1g3")
texture = ExtResource("5_idxnp")
lifetime = 0.15
fixed_fps = 0
draw_order = 0
trail_lifetime = 0.1

[node name="ParticulesMT" type="GPUParticles2D" parent="Rocket"]
material = SubResource("CanvasItemMaterial_dar0e")
position = Vector2(0, -2)
rotation = 1.5708
scale = Vector2(0.1, 0.1)
amount = 1000
amount_ratio = 0.0
process_material = SubResource("ParticleProcessMaterial_ioh63")
texture = ExtResource("5_xig4c")
lifetime = 0.4
fixed_fps = 60

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Rocket"]
position = Vector2(0, -60)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_qwlll")
animation = &"idle"

[node name="rcs_right" type="Sprite2D" parent="Rocket"]
modulate = Color(0.868985, 0.868985, 0.868985, 1)
position = Vector2(12.5, -73.5)
scale = Vector2(0.03, 0.03)
texture = ExtResource("5_nvpx3")

[node name="rcs_left" type="Sprite2D" parent="Rocket"]
modulate = Color(0.625597, 0.625597, 0.625597, 1)
position = Vector2(-12.5, -73.5)
rotation = 3.14159
scale = Vector2(0.03, 0.03)
texture = ExtResource("5_nvpx3")
flip_v = true

[node name="RayCast2DLeft" type="RayCast2D" parent="Rocket"]
position = Vector2(-14, -25)
target_position = Vector2(0, 25)

[node name="RayCast2DRight" type="RayCast2D" parent="Rocket"]
position = Vector2(14, -25)
target_position = Vector2(0, 25)

[node name="center of mass" type="Node2D" parent="Rocket"]
position = Vector2(0, -26)

[node name="Camera2D" type="Camera2D" parent="Rocket"]
position = Vector2(0, -40)
ignore_rotation = false
rotation_smoothing_enabled = true
rotation_smoothing_speed = 100.0

[node name="ColorRect" type="ColorRect" parent="Rocket"]
custom_minimum_size = Vector2(0, 5)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -353.0
offset_right = 52.0
offset_bottom = -343.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
color = Color(1, 0.306274, 0.573644, 0.686275)
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Rocket"]
custom_minimum_size = Vector2(150, 0)
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -319.0
offset_top = -156.0
offset_right = -169.0
offset_bottom = 152.0
grow_vertical = 2

[node name="angular_velocity_text" type="RichTextLabel" parent="Rocket/VBoxContainer"]
z_index = 1
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]100[/center]"
metadata/_edit_use_anchors_ = true

[node name="linear_velocity_text" type="RichTextLabel" parent="Rocket/VBoxContainer"]
z_index = 1
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]100[/center]"
metadata/_edit_use_anchors_ = true

[node name="integrity_text" type="RichTextLabel" parent="Rocket/VBoxContainer"]
z_index = 1
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]100[/center]"
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="Rocket" to="Rocket" method="_on_body_entered"]
[connection signal="simulation_finished" from="Rocket" to="Actions" method="_on_rocket_simulation_finished"]
